# Toy2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
toy2d/source/runtime/: CMakeLists.txt  pch.h
toy2d/source/runtime/core/base/: application.cpp  application.h  core.h  hash.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h
toy2d/source/runtime/core/log/: log_system.cpp  log_system.h
toy2d/source/runtime/core/util/: file_dialog.cpp  file_dialog.h  json_serializer.h  singleton.h  time_step.h
toy2d/source/runtime/function/audio/: audio_data.cpp  audio_data.h  audio_instance.cpp  audio_instance.h  audio_manager.cpp  audio_manager.h
toy2d/source/runtime/function/debug/: profiler.h
toy2d/source/runtime/function/event/: application_event.h  event.h  key_event.h  mouse_event.h
toy2d/source/runtime/function/gui/: imgui_layer.cpp  imgui_layer.h  widgets.h
toy2d/source/runtime/function/input/: input_system.cpp  input_system.h
toy2d/source/runtime/function/physics/: collider2d.cpp  collider2d.h  collision_shape2d.cpp  collision_shape2d.h  contact_listener2d.h  physics2d.cpp  physics2d.h
toy2d/source/runtime/function/scene/: components.cpp  components.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_camera.cpp  scene_camera.h  scene_serializer.cpp  scene_serializer.h  scriptable_entity.cpp  scriptable_entity.h  world.cpp  world.h
toy2d/source/runtime/function/scripting/: lua_binder.cpp  lua_binder.h  lua_interpreter.cpp  lua_interpreter.h
toy2d/source/runtime/resource/: resource.cpp  resource.h  resource_manager.cpp  resource_manager.h
(+78 files in other folders)
